GGB-1009 Item's style bar position fixed, when there is scrollbar.
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@48347 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/css/web-styles.css
+++ b/web/src/main/resources/org/geogebra/web/resources/css/web-styles.css
@@ -3519,6 +3519,10 @@ body.application[dir=rtl] .GeoGebraFrame .AlgebraViewObjectStylebar {
 	right: 46px;
 }
 
+.GeoGebraFrame .positionedObjectStyleBar_scrollbarVisible{
+	right: 31px;
+}
+
 .GeoGebraFrame .elemRow > * {
 	display: inline-block;
 	padding-left: 4px;
